Related: fdo#67395 adjust height of font name tabpage, etc.

+ put the language label beside the language listbox
  which reduces height by a line
+ use standard spacing between frames in position tabpage
+ use standard spacing horizonally between elements

(cherry picked from commit 1d33fc35f787061c9440ba44dfd53de405bd430a)

Related: fdo#67395 drop 'Preview' frame title

it's clear that it's a preview, move that string into its Accessible name for
those that can't see the preview

(cherry picked from commit 1193dc782f4479a81f3d283c99df2f5c7e022682)

Related: fdo#67395 drop 'Font' frame title

+ promote the family, style, size to frame titles and drop
the surrounding 'Font' one
+ bottom align the previews again
+ drop empty spacing labels in favour of 6pixel spacing

(cherry picked from commit 63ced8e54f1786e5814f082c9fb87c89e5c850a9)

Related: fdo#67395 add border to preview to cut up whitespace

(cherry picked from commit 167416c3ed3ed52249559ff3548c0fc06d0d0eef)

Change-Id: I1191db7aaf0922978bf6dd8da17ec4f133944b94
684f451542f5300cc206c9ade7f3b130b1c3c876
2c0b78163894c5283162c37bd71fa1bbc3c341c7
c66bf59294f7c9fb4059574765734749a40b043f